[package]
name = "colour-shit"
version = "0.1.0"
authors = ["Niclas Rosengren <niclas.rosengren@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
reqwest = "0.11.0"
serde = "1.0.123"
tokio = { version = "1.2.0", features = [ "rt-multi-thread", "macros" ] }
